--- a/glue_v1/src/components/shared/sidebar/NavbarLinksGroup.module.css
+++ b/glue_v1/src/components/shared/sidebar/NavbarLinksGroup.module.css
@@ -10,6 +10,11 @@
   border-radius: 0.5rem;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
+.control.active {
+  background-color: var(--mantine-color-dark-7);
+  color: #ffffff;
+  border-radius: 0.5rem;
+}
 
 .link:hover,
 .link:focus,
