--- a/glue_v1/src/components/shared/sidebar/NavbarLinksGroup.module.css
+++ b/glue_v1/src/components/shared/sidebar/NavbarLinksGroup.module.css
@@ -1,5 +1,4 @@
-/* Define hover styles */
-.control:hover {
+Define hover styles .control:hover {
   background-color: var(--mantine-color-dark-2);
   border-radius: 0.5rem;
 }
@@ -11,7 +10,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 .control.active {
-  background-color: var(--mantine-color-dark-7);
+  background-color: var(--mantine-color-dark-1);
   color: #ffffff;
   border-radius: 0.5rem;
 }
@@ -45,10 +44,8 @@
   display: block;
   text-decoration: none;
   padding-block: var(--mantine-spacing-xs);
-  padding-inline: var(--mantine-spacing-md);
-  padding-left: var(--mantine-spacing-md);
+  /* padding-left: var(--mantine-spacing-md); */
   margin-block: var(--mantine-spacing-xs, 4px);
-  /* margin-left: var(--mantine-spacing-xl); */
   font-size: var(--mantine-font-size-sm);
   color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
   border-left: 1px solid
